--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,16 @@
         "slim/psr7": "^1.5",
         "vlucas/phpdotenv": "^5.4",
         "slim/php-view": "^3.2",
-        "illuminate/database": "~5.1"
+        "illuminate/database": "~5.1",
+        "robmorgan/phinx": "^0.13.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        },
-        "classmap": [
-            "Models"
-        ]
+        }
     },
-    "require-dev": {
+    "require-dev": {3
         "symfony/var-dumper": "^6.1"
     }
 }
+3
