--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
             "App\\": "app/"
         }
     },
-    "require-dev": {3
+    "require-dev": {
         "symfony/var-dumper": "^6.1"
     }
 }
-3
