--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     },
     "require-dev": {
         "symfony/var-dumper": "^6.1"
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
